# IKMS

./: README.md
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: Greeting.tsx  Header.tsx
client/src/components/ai-elements/: confirmation.tsx  prompt-input.tsx  tool.tsx
server/: .gitignore  .vercelignore  Procfile  pyproject.toml  requirements.txt  server.py  test_multi_call_retrieval.py  vercel.json  vercel_app.py
server/src/: api.py
server/src/auth/: jwt.py
server/src/config/: __init__.py  env_config.py  logging.py
server/src/core/agent/: __init__.py  agents.py  checkpointer.py  graph.py  nodes.py  prompts.py  response_modal.py  state.py  tools.py  utils.py
server/src/core/llm/: __init__.py  factory.py
server/src/core/retrieval/: __init__.py  serialization.py  vector_store.py
server/src/model/: __init__.py  dto.py
server/src/router/: chat_router.py
server/src/service/: __init__.py  file_upload.py  indexing.py  qa_service.py  streaming_service.py
server/src/utils/: langgraph_vercel_adapter.py  message_transformer.py
